@@ -7,7 +7,9 @@ function settings=default_BT_Settings
     % settings.SYSTEM.cutterSide=1; %if 1 the cutter is to the right of the objective. If -1 it's to the left.
     % settings.SYSTEM.defaultFrontLeft=[0,0]; %Use any reasonable value for the front left position. This is basically just a user courtesy issue.
     % settings.SYSTEM.homeZjackOnZeroMove=1; %If true, BakingTray homes the Z jack if the user moves to zero (lowered) from a large distance away. THE HOME POSITION MUST BE THE LOWERED POSITION!
-
+    % settings.SYSTEM.dominantTilingDirection='y'; % The  stage axis which will conduct the bulk of the motions in the S-shaped tile scan
+    % settings.SYSTEM.defaultSavePath='C:\'; % The default path to bring up for saving data. If missing or not valid we use the current directory instead. 
+    %
     % settings.SLACK.user='@SYSTEM'; % This is the username that appears with a Slack message
     % settings.SLACK.hook=[]; % This is the hook for sending messages
     %
@@ -24,6 +26,7 @@ function settings=default_BT_Settings
     settings.SYSTEM.defaultFrontLeft=[0,0];
     settings.SYSTEM.homeZjackOnZeroMove=1;
     settings.SYSTEM.dominantTilingDirection='y';
+    settings.SYSTEM.defaultSavePath='C:\';
 
 
     settings.SLACK.user='@SYSTEM';
